<resources>
    <string name="app_name">NYTimes ArticleRegistry</string>
    <string name="title_article_detail">Article Detail</string>
    <string name="retry">Click to retry</string>
    <string name="no_internet_connection">No internet connection! Check and try again. You can visit your saved articles meanwhile.</string>
    <string name="no_results">No content.. 😓</string>
    <string name="search_hint">Search N.Y.Times articles</string>
    <string name="menu_title_filter">Filter/order</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_title_favourites">Favourites</string>
    <string name="menu_title_newest">Newest</string>
    <string name="filter_dialog_title">Filter/sort your search</string>
    <string name="order_newest">Newest</string>
    <string name="order_oldest">Oldest</string>
    <string name="filter_begin_date_label">Begin date:</string>
    <string name="filter_end_date_label">End date:</string>
    <string name="filter_order_label">Order:</string>
    <string name="filter_category_label">Category:</string>
    <string name="filter_submit_button_label">Filter</string>
    <string name="end_edittext_hint">set end date</string>
    <string name="begin_edittext_hint">set begin date</string>
    <string name="searching_for_hint">Searching for:</string>
    <string name="latest_articles_hint">Loading latest articles</string>
    <string name="showing_favourite_articles_hint">Loading favourite articles</string>
    <string name="dismiss_snackbar">Dismiss</string>
    <string name="added_to_fav_prefix">Successfully added&#160;</string>
    <string name="added_to_fav_suffix">&#160;to your favourite list</string>
    <string name="removed_from_fav_prefix">Successfully removed&#160;</string>
    <string name="removed_from_fav_suffix">&#160;from your favourite list</string>
    <string name="article_main_image">Article main image</string>
    <string name="appwidget_text">Save your favourite articles to see them here</string>
    <string name="add_widget">Add widget</string>
    <string name="title_collection_widget">ArticleRegistry / saved articles</string>
    <string name="empty_view_text">It\'s time to bookmark some articles to see them here and read them even offline!</string>
    <string name="list_date_prefix">Date:&#160;</string>
    <string name="article_link_label">Source:</string>
    <string name="na">n/a</string>
    <string name="image_transition">image_transition</string>
    <string name="menu_title_share">Sharing:&#160;</string>
    <string name="share_url">Share Articles\'s Originali URL</string>
    <string name="save_remove_from_favourites_fab">Share/remove from favourites</string>
    <string name="show_filter_options">Show query filters</string>
    <string name="powered_by_nytimes">App powered by NYTimes</string>
    <string name="ads">ADS</string>
    <string name="loading">Loading</string>
</resources>
