<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView">
        <LinearLayout android:id="@+id/art_details_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true">

            <ImageView android:id="@+id/article_main_image_twopane"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:tint="@color/dark_tint"
                android:transitionName="@string/image_transition"
                android:contentDescription="@string/article_main_image"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/article_title"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textIsSelectable="true"
                />

            <TextView
                android:id="@+id/article_detail"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textIsSelectable="true"
                />


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="201dp"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/date_label"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_date_prefix"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/article_date"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/na"
                    android:textIsSelectable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/date_label"
                    app:layout_constraintTop_toTopOf="@+id/date_label" />

                <TextView
                    android:id="@+id/source_label"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article_link_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/article_source" />

                <TextView
                    android:id="@+id/article_source"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/na"
                    android:textColor="@color/theme_accent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/article_date"
                    app:layout_constraintTop_toBottomOf="@+id/article_date" />

            </android.support.constraint.ConstraintLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textIsSelectable="true"
                android:src="@drawable/poweredby_nytimes_150c"
                android:contentDescription="@string/powered_by_nytimes"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>

</ScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:foregroundGravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        android:contentDescription="@string/ads">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
